--- a/relatorio/relatorio.tex
+++ b/relatorio/relatorio.tex
@@ -15,9 +15,9 @@
 
 \begin{document} 
 \input{title.tex}
-\input{oracle.tex}
-\input{mongo.tex}
-\input{neo4j.tex}
-\input{conclusoes.tex}
+\input{datasetdescription.tex}
+\input{tecnicas.tex}
+\input{aplicacaoweb.tex}
+\input{conclusao.tex}
 
 \end{document}
