--- a/relatorio/aplicacaoweb.tex
+++ b/relatorio/aplicacaoweb.tex
@@ -47,8 +47,11 @@ O utilizador poderá também atribuir uma pontuação (1 a 5 estrelas).
 
 \begin{figure}[H]
 \centering
-\includegraphics[scale=0.3]{6.png}
+\includegraphics[scale=0.3]{11.png}
+\includegraphics[scale=0.3]{12.png}
 \end{figure}
+
 
 Sempre que um utilizador atribui uma pontuação a um filme é adicionada informação à base de dados. Por exemplo, se um utilizador x que viu um filme y e atribuiu uma pontuação z, esta a informação fica guardada.
 
+\newpage
