--- a/relatorio/title.tex
+++ b/relatorio/title.tex
@@ -12,10 +12,10 @@
 \maketitle
 
 \begin{abstract}
-Neste trabalho procedeu-se à construção de um sistema de recomendação iniciando-se com uma introdução ao tema abordado. Seguidamente analisou-se o dataset escolhido e mais tarde foram abordados os seguintes paradigmas: Sistemas baseados em filtros colaborativos (community based recommender systems), Sistemas de Recomendação Baseados em Conteúdo (Content-based recommender systems), Sistemas de Recomendação Baseados em restrições (Restriction- based recommender Systems), Sistemas de Recomendação Baseados em Conhecimento
-(Knowledge-based recommender systems), Sistemas de Recomendação híbridos/Agregados (Hybridand Ensemble-based recommender systems). Por fim, foi implementada uma aplicação web para interagir directamente com os utilizadores de maneira a lhe serem recomendados filmes.\newline
+Neste trabalho abordou-se o tema "Sistemas de Recomendação". Este projeto insidiu sobre um dataSet de filmes encontrado no Kaggle e guardado em ficheiros excel. Para a realização deste projeto usaram-se várias linguagens de programação e tecnologias, nomeadamente Flask(Python), HTML, CSS, Jinja2, JavaScript e MongoDB. O Mongo foi usado para guardar o nosso dataSet de forma a que este no futuro posso escalar horizontalmente e também possibilitar um acesso mais rápido aos dados. O HTML, o CSS, o Jinja2 e o JavaScript foram usados para fazer as páginas web e programar o seu comportamento. O Flask foi usado para fazer a ligação entre FrontEnd e Backend e para controlar as mudanças de estado das páginas web. 
+\newline
 
-\keywords{Sistemas de Recomendação  \and Filmes }
+\keywords{Sistemas de Recomendação \and Flask \and Python \and HTML \and CSS \and Jinja2 \and JavaScript \and MongoDB \and Filmes}
 \end{abstract}
 
 
@@ -23,9 +23,8 @@ Neste trabalho procedeu-se à construção de um sistema de recomendação inici
 \normalsize{\bfseries Introdução}\hfill 
 \end{center}
 
-Os Sistemas de Recomendação surgiram como uma forma de resolver a necessidade de fornecer uma experiência personalizada na Internet a cada utilizador. Estes Sistemas têm como objectivo apresentar a um utilizador produtos que lhe sejam de interesse. 
-O propósito deste trabalho é desenvolver um sistema de recomendação de Filmes, uma vez que foi um dos temas que abordamos no primeiro trabalho prático.
-
+Neste trabalho foi explorada a aplicação dos Sistemas de Recomendação a uma base de dados de filmes. O primeiro passo para este objetivo passou por planear os requisitos dos utilizadores da nossa base de dados que usem o nosso sistema de recomendação. Este requisitos são: obter uma recomendação baseada no que os top X utilizadores semelhantes ao alvo viram e obter uma recomendação baseada no conteúdo que o alvo viu e gostou (por exemplo por gênero de filme). Para os casos de cold-start de utilizadores foram adicionados métodos para apresentação dos top 10 filmes mais bem cotados pela IMDB e os 15 filmes mais bem cotados por utilizadores do sistema e para os casos de cold-start dos filmes foi criado um método para devolver os 15 filmes mais recente ainda sem visualizações por data de lançamento(do mais recente para o mais antigo). Para além disso foi introduzido uma search bar que permite ao utilizador da aplicação utilizar um sistema de recomendação baseado em restrições, iterativo. Adicionalmente juntaram-se os requisitos de consultar filmes por ano de lançamento ou por gênero.
+\par Para permitir uma experiência personalizada aos utilizadores foi necessário identifica-los inequivocamente e para isso tivemos de implementar um sistema de autenticação no qual o utilizador é identificado por um email único e ao qual é associado um id usado para guardar as suas avaliações dos filmes vistos.
 
 \newpage
 
