--- a/relatorio/tecnicas.tex
+++ b/relatorio/tecnicas.tex
@@ -18,7 +18,7 @@ O método que realiza este filtro chama-se \textit{colab\_filtering()}, de segui
 \end{figure}
 
 Neste método, a primeira coisa a fazer é recolher os documentos com as avaliações do utilizador aos filmes por ele vistos. Nesta fase o utilizador pode não ter visto filmes ainda e solicitar o filtro colaborativo, neste caso esta função retorna-lhe os filmes mais bem cotados pelo IMDB (que têm mais chances de ser do intresse do utilizador).
-\par Caso o utilizador já tenha visto um ou mais filmes estes são recolhidos e são procurados na base de dados documentos de outros utilizadores que tenham visto os mesmos filmes,sendo estes guardados num array. De seguida este array é percorrido e é calculada a diferença entre as avaliações de cada utilizador e o nosso alvo guardando-as numa coluna extra.
+\par Caso o utilizador já tenha visto um ou mais filmes estes são recolhidos e são procurados na base de dados documentos de outros utilizadores que tenham visto os mesmos filmes,sendo estes guardados num array. De seguida este array é percorrido e é calculada a diferença entre as avaliações de cada utilizador e o nosso alvo, guardando-as numa coluna extra.
 Após este processo é calculada a média das diferenças por utilizador e o array resultante com duas posições (id utilizador, diferença) é ordenado por ordem crescente de diferença.
 Por fim basta procurar quais os filmes avaliados por cada utilizador, percorrendo o array de utilizadores semelhantes, dos quais estes gostaram tendo o cuidado de não inserir filmes repetidos ou que o alvo já tenha visto.
 
@@ -34,7 +34,7 @@ O método para realizar esta abordagem chama-se \textit{filmWatchBased()}, de se
 \label {fig02}
 \end{figure}
 
-Este método começa por reunir da coleção userRatings todos os ids dos filmes avaliados de forma positiva pelo utilizador(rating >= 3). De seguida são reunidos os gêneros desse filmes e é feita uma busca na coleção films por esse mesmos gêneros. Para cada gênero são colecionados 2 filmes até um máximo de 15 filmes ou até não haver mais gêneros para procurar.
+Este método começa por reunir da coleção userRatings todos os ids dos filmes avaliados de forma positiva pelo utilizador(rating >= 3). De seguida são reunidos os gêneros desse filmes e é feita uma busca na coleção films por esse mesmos géneros. Para cada gênero são colecionados 2 filmes até um máximo de 15 filmes ou até não haver mais gêneros para procurar.
 
 
 \subsection{Sistemas baseados em conhecimento}
