--- a/relatorio/conclusao.tex
+++ b/relatorio/conclusao.tex
@@ -2,5 +2,5 @@
 
 No nosso sistema de recomendação apresentado são usadas várias abordagens, com o intuito de fornecer recomendações baseadas nos géneros dos filmes, bem como nos ratings atribuídos a cada filme. Se um utilizador classificar um filme de um género em particular, recomenda-se filmes que contenham géneros semelhantes. 
 O sistema de recomendação pode ser testado na nossa aplicação RecSysMovies. No entanto, no nosso trabalho foram utilizados vários atributos, considerando-se assim um sistema bastante complexo. 
-Todas as abordagens mencionadas ao longo deste trabalho têm os seus próprios benefícios e problemas, mas ainda não estão no nível adequado para resolver todos os problemas relacionados, por exemplo, à segurança. Um dos trabalhos futuros seria melhorar a nossa aplicação bem como o sistema de Recomendação implementado...
+Todas as abordagens mencionadas ao longo deste trabalho têm os seus próprios benefícios e problemas, mas ainda não estão no nível adequado para resolver todos os problemas relacionados, por exemplo, à segurança. Um dos trabalhos futuros seria melhorar a nossa aplicação bem como o sistema de Recomendação implementado.
 
