--- a/relatorio/conclusao.tex
+++ b/relatorio/conclusao.tex
@@ -1,6 +1,5 @@
 \section{Conclusão}
 
-No nosso sistema de recomendação apresentado são usadas várias abordagens, com o intuito de fornecer recomendações baseadas nos géneros dos filmes, bem como nos ratings atribuídos a cada filme. Se um utilizador classificar um filme de um género em particular, recomenda-se filmes que contenham géneros semelhantes. 
-O sistema de recomendação pode ser testado na nossa aplicação RecSysMovies. No entanto, no nosso trabalho foram utilizados vários atributos, considerando-se assim um sistema bastante complexo. 
-Todas as abordagens mencionadas ao longo deste trabalho têm os seus próprios benefícios e problemas, mas ainda não estão no nível adequado para resolver todos os problemas relacionados, por exemplo, à segurança. Um dos trabalhos futuros seria melhorar a nossa aplicação bem como o sistema de Recomendação implementado...
-
+No nosso sistema de recomendação apresentado são usadas várias abordagens, com o intuito de fornecer as melhores recomendações de filmes nomeadamente filtros colaborativos baseados em utilizadores, recomendações baseadas em conteúdo assistido, recomendações baseadas em restrições como palavras ou frases e ainda se implementaram 3 recomendações não pertencentes ás estudadas para melhorar a experiência ao utilizar a aplicação e para resolver o problema de cold-case de filmes (top10, filmes mais bem cotados pelos utilizadores e filmes recentes sem votos).
+Ainda que o trabalho cumpra o requisito de aplicar os sistemas de recomendação aos filmes e esteja pensado para escalar horizontalmente, não trata aspetos como a segurança. Implementar mecanismos como recuperação de conta e encriptação de mensagens trocadas entre cliente e servidor ficarão para trabalho futuro.
+Em suma, a aplicação desenvolvida responde ás necessidades de recomendação de filmes por parte de qualquer utilizador.
