--- a/relatorio/aplicacaoweb.tex
+++ b/relatorio/aplicacaoweb.tex
@@ -30,7 +30,7 @@ Caso já tenhamos conta devemos efetuar o login inserindo o email e a password.\
 \label {fig09}
 \end{figure}
 
-Quando um utilizador efetua o login com sucesso na sua conta pode ver os filmes que foram recentemente adicionados à nossa coleção(são os filme com menos têm votações da nossa base de dados e são ordenados por data caso o número de votações coincidam). Este sistema funciona graças ao sistema implementado na função filmsColdCases() que promove os filmes que não têm como ser recomendados de outra forma por falta de avaliações de utilizadores.\newline
+Quando um utilizador efetua o login com sucesso na sua conta pode ver os filmes que foram recentemente adicionados à nossa coleção(são os filmes com menos votações da nossa base de dados e são ordenados por data caso o número de votações coincida). Este sistema funciona graças ao sistema implementado na função filmsColdCases() que promove os filmes que não têm como ser recomendados de outra forma por falta de avaliações de utilizadores.\newline
 
 
 \begin{figure}[H]
@@ -40,7 +40,7 @@ Quando um utilizador efetua o login com sucesso na sua conta pode ver os filmes 
 \label {fig10}
 \end{figure}
 
-Adicionalmente é possivel através desta página pesquizar filmes por ano de lançamento (apenas são mostrados anos de filmes presentes na base de dados), por gênero e por um dos sistemas de recomendação disponibilizados.\newline
+Adicionalmente é possivel através desta página pesquizar filmes por ano de lançamento (apenas são mostrados anos de filmes presentes na base de dados), por género e por um dos sistemas de recomendação disponibilizados.\newline
 
 
 \begin{figure}[H]
@@ -61,7 +61,7 @@ Uma alternativa para procurar filmes é utilizar a \textit{search bar} disponibi
 \label {fig12}
 \end{figure}
 
-Após visualizar o filme o utilizador poderá atribuir uma pontuação (1 a 5 estrelas). Note-se que o botão submit fica bloqueado até uma classificação ser escolhida.
+Após visualizar o filme, o utilizador poderá atribuir uma pontuação (1 a 5 estrelas). Note-se que o botão submit fica bloqueado até uma classificação ser escolhida.
 
 \begin{figure}[H]
 \centering
@@ -95,7 +95,7 @@ Se escolhermos o sistema de recomendação \textit{"Similar User's Views"}, obte
 \label {fig15}
 \end{figure}
 
-Se escolhermos o sistema de recomendação \textit{"Your Personal List"} obtemos uma lista de filmes baseado nos gêneros dos filmes vistos pelo utilizador esta lista resulta da aplicação do método filmWatchBased().\newline
+Se escolhermos o sistema de recomendação \textit{"Your Personal List"} obtemos uma lista de filmes baseado nos géneros dos filmes vistos pelo utilizador. Esta lista resulta da aplicação do método filmWatchBased().\newline
 
 \begin{figure}[H]
 \centering
@@ -104,7 +104,7 @@ Se escolhermos o sistema de recomendação \textit{"Your Personal List"} obtemos
 \label {fig16}
 \end{figure}
 
-Por fim se escolhermos o sistema de recomendação \textit{"User's Best Rates"} obtemos uma lista dos filmes mais bem cotados por todos os utilizadores do sistema.\newline
+Por fim, se escolhermos o sistema de recomendação \textit{"User's Best Rates"} obtemos uma lista dos filmes mais bem cotados por todos os utilizadores do sistema.\newline
 
 \begin{figure}[H]
 \centering
