--- a/relatorio/aplicacaoweb.tex
+++ b/relatorio/aplicacaoweb.tex
@@ -40,7 +40,7 @@ Quando um utilizador efetua o login com sucesso na sua conta pode ver os filmes 
 \label {fig10}
 \end{figure}
 
-Adicionalmente é possivel através desta página pesquizar filmes por ano de lançamento (apenas são mostrados anos de filmes presentes na base de dados), por género e por um dos sistemas de recomendação disponibilizados.\newline
+Adicionalmente é possivel através desta página pesquisar filmes por ano de lançamento (apenas são mostrados anos de filmes presentes na base de dados), por género e por um dos sistemas de recomendação disponibilizados.\newline
 
 
 \begin{figure}[H]
