--- a/relatorio/title.tex
+++ b/relatorio/title.tex
@@ -23,7 +23,7 @@ Neste trabalho abordou-se o tema "Sistemas de Recomendação". Este projeto insi
 \normalsize{\bfseries Introdução}\hfill 
 \end{center}
 
-Neste trabalho foi explorada a aplicação dos Sistemas de Recomendação a uma base de dados de filmes. O primeiro passo para este objetivo passou por planear os requisitos dos utilizadores da nossa base de dados que usem o nosso sistema de recomendação. Estes requisitos são: obter uma recomendação baseada no que os top X utilizadores semelhantes ao alvo viram e obter uma recomendação baseada no conteúdo que o alvo viu e gostou (por exemplo por gênero de filme). Para os casos de cold-start de utilizadores foram adicionados métodos para apresentação dos top 10 filmes mais bem cotados pela IMDB e os 15 filmes mais bem cotados por utilizadores do sistema e para os casos de cold-start dos filmes foi criado um método para devolver os 15 filmes mais recente ainda sem visualizações por data de lançamento(do mais recente para o mais antigo). Para além disso foi introduzido uma search bar que permite ao utilizador da aplicação utilizar um sistema de recomendação baseado em restrições, iterativo. Adicionalmente juntaram-se os requisitos de consultar filmes por ano de lançamento ou por gênero.
+Neste trabalho foi explorada a aplicação dos Sistemas de Recomendação a uma base de dados de filmes. O primeiro passo para este objetivo passou por planear os requisitos dos utilizadores da nossa base de dados que usem o nosso sistema de recomendação. Estes requisitos são: obter uma recomendação baseada no que os top X utilizadores semelhantes ao alvo viram e obter uma recomendação baseada no conteúdo que o alvo viu e gostou (por exemplo por género de filme). Para os casos de cold-start de utilizadores foram adicionados métodos para apresentação dos top 10 filmes mais bem cotados pela IMDB e os 15 filmes mais bem cotados por utilizadores do sistema e para os casos de cold-start dos filmes foi criado um método para devolver os 15 filmes mais recente ainda sem visualizações por data de lançamento(do mais recente para o mais antigo). Para além disso foi introduzido uma search bar que permite ao utilizador da aplicação utilizar um sistema de recomendação baseado em restrições, iterativo. Adicionalmente juntaram-se os requisitos de consultar filmes por ano de lançamento ou por género.
 \par Para permitir uma experiência personalizada aos utilizadores foi necessário identificá-los inequivocamente e para isso tivemos de implementar um sistema de autenticação no qual o utilizador é identificado por um email único e ao qual é associado um id usado para guardar as suas avaliações dos filmes vistos.
 
 \newpage
